syntax = "proto3";

package yandex.cloud.events.logging;

import "google/protobuf/duration.proto";
import "google/protobuf/field_mask.proto";
import "google/rpc/status.proto";
import "yandex/cloud/access/access.proto";
import "yandex/cloud/events/common.proto";
import "yandex/cloud/events/options.proto";
import "yandex/cloud/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/events/logging;logging";
option java_package = "yandex.cloud.api.events.logging";
option java_outer_classname = "LoggingEvents";

message CreateLogGroup {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  events.EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8;
  events.Response response = 9;

  message EventDetails {
    string log_group_id = 1 [(required) = true];
    string log_group_name = 2;
    string log_group_status = 3 [(required) = true];
    google.protobuf.Duration log_group_retention_period = 4 [(required) = true];
    string data_stream = 5;
  }
  message RequestParameters {
    string folder_id = 1 [(required) = true];
    string name = 2;
    map<string, string> labels = 3;
    google.protobuf.Duration retention_period = 4;
    string data_stream = 5;
  }
}

message UpdateLogGroup {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  events.EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8;
  events.Response response = 9;

  message EventDetails {
    string log_group_id = 1 [(required) = true];
    string log_group_name = 2;
    string log_group_status = 3 [(required) = true];
    google.protobuf.Duration log_group_retention_period = 4 [(required) = true];
    string data_stream = 5;
  }
  message RequestParameters {
    string log_group_id = 1 [(required) = true];
    string name = 2;
    map<string, string> labels = 3;
    google.protobuf.Duration retention_period = 4;
    google.protobuf.FieldMask update_mask = 5;
    string data_stream = 6;
  }
}

message DeleteLogGroup {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  events.EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8;
  events.Response response = 9;

  message EventDetails {
    string log_group_id = 1 [(required) = true];
    string log_group_name = 2;
    string log_group_status = 3 [(required) = true];
    google.protobuf.Duration log_group_retention_period = 4 [(required) = true];
    string data_stream = 5;
  }
  message RequestParameters {
    string log_group_id = 1 [(required) = true];
  }
}

message ChangeLogGroupAccessBindings {

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  events.EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];

  message EventDetails {
    string log_group_id = 1 [(required) = true];
  }
}

message SetLogGroupAccessBindings {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  events.EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8 [(required) = true];
  events.Response response = 9 [(required) = true];

  message EventDetails {
    string log_group_id = 1 [(required) = true];
    string log_group_name = 2;
    string log_group_status = 3 [(required) = true];
    repeated access.AccessBinding access_bindings = 4;
    repeated access.AccessBindingDelta access_binding_deltas = 5;
  }
  message RequestParameters {
    string log_group_id = 1 [(required) = true];
    repeated access.AccessBinding access_bindings = 2;
  }
}

message UpdateLogGroupAccessBindings {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  events.EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8 [(required) = true];
  events.Response response = 9 [(required) = true];

  message EventDetails {
    string log_group_id = 1 [(required) = true];
    string log_group_name = 2;
    string log_group_status = 3 [(required) = true];
    repeated access.AccessBinding access_bindings = 4;
    repeated access.AccessBindingDelta access_binding_deltas = 5;
  }
  message RequestParameters {
    string log_group_id = 1 [(required) = true];
    repeated access.AccessBindingDelta access_binding_deltas = 2;
  }
}
